fix: camera and css overflow bugs

--- a/src/PacmanGame/Screen/ButtonsScreen/buttons-screen.css
+++ b/src/PacmanGame/Screen/ButtonsScreen/buttons-screen.css
@@ -179,7 +179,7 @@ h1 {
 	display: relative;
 	height: 85%;
 	width: 90%;
-
+	overflow-y: hidden;
 }
 .leaderboards-page{
 	display: flex;
